# Home_LLC

./: Data_Preparation.ipynb  Modelling.ipynb  README.md  app.py  model.py  pyproject.toml
Data/: prepared_dataset.csv
Data/Sourced/: CORESTICKM159SFRBATL.csv  LNS14000024.csv
Model/: finalized_model.pkl
